# detsys-ids-client

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
nix/: check.nix
src/: builder.rs  checkin.rs  collator.rs  compression_set.rs  configuration_proxy.rs  ds_correlation.rs  identity.rs  json_string.rs  lib.rs  recorder.rs  submitter.rs  worker.rs
src/checkin/: checkin_diff.rs  coherent_feature_flag_diff.rs  coherent_feature_flags.rs  data.rs  feature.rs  feature_diff.rs  mod.rs  server_options.rs
src/nodejs/: builder.rs  mod.rs  recorder.rs
src/storage/: generic.rs  json_file.rs  mod.rs
src/system_snapshot/: generic.rs  mod.rs
src/test/: basic.rs  mod.rs  slow_transport.rs  timeout.rs
src/transport/: file.rs  http.rs  mod.rs  srv_http.rs
