[package]
name = "detsys-ids-client"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "A client for install.determinate.systems."

[features]
default = []

# See: https://github.com/tokio-rs/tracing/issues/3207
tracing-instrument = []


[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.12", default-features = false, features = [
    "json",
    "zstd",
    "rustls-tls-native-roots",
] }
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.137"
sysinfo = { version = "0.33.1", default-features = false, features = [ "system", "disk" ] }
tracing = { version = "0.1" }
tokio = { version = "1", features = ["full", "tracing"] }
uuid = { version = "1.12.1", features = [ "v4", "v7", "serde"] }
thiserror = "2.0.11"
url = "2.5.4"

detsys-srv = "0.3"
http = "1.2.0"
hickory-resolver = "0.25.1"
target-lexicon = "0.13.1"
is_ci = "1.2.0"
sys-locale = "0.3.2"
iana-time-zone = "0.1.61"
async-compression = { version = "0.4.18", features = ["zstd", "tokio"] }

[dev-dependencies]
tokio-test = "0.4.4"

