[package]
name = "detsys-ids-client"
version = "0.6.2"
edition = "2024"
license = "Apache-2.0"
description = "A client for install.determinate.systems."

[features]
default = []

# See: https://github.com/tokio-rs/tracing/issues/3207
tracing-instrument = []


[dependencies]
async-compression = { version = "0.4.18", features = ["zstd", "tokio"] }
chrono = { version = "0.4.38", features = ["serde"] }
detsys-srv = "0.4"
hickory-resolver = "0.25.1"
http = "1.2.0"
iana-time-zone = "0.1.61"
is_ci = "1.2.0"
reqwest = { version = "0.12.12", default-features = false, features = [
    "json",
    "zstd",
    "rustls-tls-native-roots",
] }
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.137"
sys-locale = "0.3.2"
sysinfo = { version = "0.37.0", default-features = false, features = [ "system", "disk" ] }
target-lexicon = "0.13.1"
tempfile = "3.21.0"
thiserror = "2.0.11"
tokio = { version = "1", features = ["full", "tracing"] }
tracing = { version = "0.1" }
url = "2.5.4"
uuid = { version = "1.12.1", features = [ "v4", "v7", "serde"] }
xdg = "3.0.0"

[dev-dependencies]
once_cell = "1.21.3"
tokio-test = "0.4.4"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
